--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -2,6 +2,7 @@
   height: 100vh;
   display: flex;
   align-items: flex-start;
+  overflow: hidden;
 }
 
 .main {
@@ -12,4 +13,5 @@
   background: var(--light-grey);
   display: flex;
   width: 100vw;
+  overflow: hidden;
 }
