--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -4,8 +4,8 @@
   list-style: none;
   text-decoration: none;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 :root {
@@ -24,6 +24,7 @@ body {
   background: #202225;
   font-size: 0.95rem;
   color: #dcddde;
+  overflow: hidden;
 }
 
 #online,
@@ -41,7 +42,7 @@ body {
 }
 
 #offline::before {
-  content: '';
+  content: "";
   width: 6px;
   height: 6px;
   background: #2f3136;
@@ -52,7 +53,7 @@ body {
   left: 2px;
 }
 
-input[type='search'] {
+input[type="search"] {
   border: none;
   outline: none;
   width: 100%;
